// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-comment-field Renders \`pbehavior-comment-field\` with custom props 1`] = `
<div>
  <div
    class="layout align-center"
  >
    <div
      class="v-input v-textarea v-input--is-label-active v-input--is-dirty theme--light v-text-field"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Message
            </label>
            <textarea
              name="undefined_message"
              rows="5"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
    <c-action-btn-stub
      type="delete"
    />
  </div>
</div>
`;

exports[`pbehavior-comment-field Renders \`pbehavior-comment-field\` with default props 1`] = `
<div>
  <div
    class="layout align-center"
  >
    <div
      class="v-input v-textarea theme--light v-text-field"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              class="v-label theme--light"
              style="left: 0px; position: absolute;"
            >
              Message
            </label>
            <textarea
              name="undefined_message"
              rows="5"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            />
          </div>
        </div>
      </div>
    </div>
    <c-action-btn-stub
      type="delete"
    />
  </div>
</div>
`;
